Finish base framework functional

--- a/src/assets/exel.html
+++ b/src/assets/exel.html
@@ -114,7 +114,7 @@
             <div class="row-info">1</div>
             <div class="row-data">
                 <div class="cell selected" contenteditable="">1</div>
-                <div class="cell" contenteditable="">2</div>
+                <div class="cell" contenteditable>2</div>
                 <div class="cell" contenteditable="">3</div>
             </div>
         </div>
